force-app/main/default/objects/Dependant__c/Dependant__c.object-meta.xml
<CustomObject>
    <label>Dependant</label>
    <nameField>
        <displayFormat>DEP- {00000000}</displayFormat>
        <label>Dependant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dependants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>