force-app/main/default/objects/Dependant__c/fields/Dependent_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Dependent_s_Name__c</fullName>
    <label>Dependent&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>