force-app/main/default/objects/Dependant__c/fields/Mortgage_Case__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Case__c</fullName>
    <label>Mortgage Case</label>
    <referenceTo>Mortgage_Case__c</referenceTo>
    <relationshipLabel>Dependants</relationshipLabel>
    <relationshipName>Dependants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>